# home

./: .bash_aliases  .bash_profile_mac  .zshrc  .zshrc_old  alias  env.sh  example  my_zshrc  some
shell/: ab.sh  assumerole.sh  aws_account.sh  gcp.sh  gdb.sh  git_commit.sh  git_push_first.sh  gitpull  gke.sh  gke2.sh  gpsf.sh  gpsl.sh  gt.sh  install_github_actions_runner.sh  install_github_actions_runner_arm64.sh  killport.sh  mfa.sh  mount.sh  mount_instance_store.sh  mysql_dump.sh  mysqlssh.sh  nr.sh  rmm.sh  rmreal.sh  set_ecs_task_count.sh  sns.sh  speedtest_gcs.sh  start.sh  stop.sh  te.sh  wake_lambda.sh
test/: main.py  pyproject.toml
test_go/: go.mod  main.go
