[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["keewoong-nam <keewoong-nam@flicspy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
